Bug 392930 - Win-10 crashes when 4.1.0 pre-alpha Window Layouts tool used
Summary: Win-10 crashes when 4.1.0 pre-alpha Window Layouts tool used
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-09 14:24 UTC by Ahab Greybeard
Modified: 2023-09-11 14:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2018-04-09 14:24:11 UTC
This crash situation has been observed with the Windows Nightly build (g82a8db752) .zip portable version.

In the new Window Layouts tool, if single monitor and dual monitor layouts are set up and saved, then switching between single and dual layouts can cause a crash. This happens often, but not always.

It has also been seen to crash when switching between two dual monitor layouts.
Comment 1 joupent 2018-04-20 11:23:57 UTC
Git commit a318e3f9491f773d09c452b1b3681f71d3152009 by Jouni Pentikäinen.
Committed on 20/04/2018 at 11:18.
Pushed by jounip into branch 'master'.

Fix crash when switching to a window layout with "show image in all windows" enabled

M  +2    -2    libs/ui/KisView.cpp
M  +2    -0    libs/ui/KisWindowLayoutManager.cpp
M  +4    -0    libs/ui/KisWindowLayoutResource.cpp

https://commits.kde.org/krita/a318e3f9491f773d09c452b1b3681f71d3152009
Comment 2 joupent 2018-04-20 11:33:25 UTC
I have fixed a bug, which is likely behind the crashes you describe. If the crash still occurs after this fix, please reopen the report.
Comment 3 Dmitry Kazakov 2023-09-11 14:15:54 UTC
Git commit 95a2e1a8b70410e0381274d13cd78ea7df486acc by Dmitry Kazakov.
Committed on 11/09/2023 at 16:07.
Pushed by dkazakov into branch 'krita/5.2'.

Don't allow closing hidden document views without confirmation

The original fix was supposed to ease the multimonitor layouts somehow,
but it seems like the feature is just broken and this check does not
really change much.
Related: bug 474396

Original bug whose fix caused the issue:

M  +2    -2    libs/ui/KisView.cpp

https://invent.kde.org/graphics/krita/-/commit/95a2e1a8b70410e0381274d13cd78ea7df486acc
Comment 4 Dmitry Kazakov 2023-09-11 14:16:38 UTC
Git commit 1c0f18bc706889a9e02183e462fd37cf4f7e1d3c by Dmitry Kazakov.
Committed on 11/09/2023 at 16:16.
Pushed by dkazakov into branch 'master'.

Don't allow closing hidden document views without confirmation

The original fix was supposed to ease the multimonitor layouts somehow,
but it seems like the feature is just broken and this check does not
really change much.
Related: bug 474396

Original bug whose fix caused the issue:

M  +2    -2    libs/ui/KisView.cpp

https://invent.kde.org/graphics/krita/-/commit/1c0f18bc706889a9e02183e462fd37cf4f7e1d3c