Fix crash when switching to a window layout with "show image in all windows" enabled

BUG: 392930